--- a/gateway/src/main/resources/config/application.yml
+++ b/gateway/src/main/resources/config/application.yml
@@ -11,10 +11,7 @@ server:
 spring:
   application:
     name: zuul-server
-zuul:
-  routes:
-    authentication:
-      path: /api/v1/gateway/authentication/**
-      url: http://localhost:8081
+  profiles:
+    active: dev
 
 
