--- a/authentication/src/main/resources/application.yml
+++ b/authentication/src/main/resources/application.yml
@@ -1,19 +1,13 @@
-server:
-  port: 8081
 spring:
-  datasource:
-    driver-class-name: org.mariadb.jdbc.Driver
-    password: password
-    url: jdbc:mariadb://localhost:3306/authentication?allowPublicKeyRetrieval=true&useSSL=false&useUnicode=true&characterEncoding=UTF-8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true
-    username: admin
-  jpa:
-    hibernate:
-      ddl-auto: update
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MariaDB103Dialect
-        format_sql: true
-        jdbc:
-          lob:
-            non_contextual_creation: true
-    show-sql: true
+  profiles:
+    active: dev
+eureka:
+  client:
+    fetch-registry: false
+    register-with-eureka: true
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    appname: authentication
+    hostname: localhost
+    instance-id: authentication
